feat: More work on Read algorithms